# Recovera-Copilot-

Recovera_backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
Recovera_backend/app/agents/: analytics_interpreter.py  planner_agent.py  query_executor.py  sql_compiler.py  sql_critic.py  sql_generator.py  sql_safety.py  sql_validator.py
Recovera_backend/app/core/: chart_grammar.py  config.py  context_compression.py  golden_evaluator.py  intent_classifier.py  memory_layer.py  multi_key_router.py  orchestrator.py  question_patterns.py  schema_registry.py
Recovera_backend/app/database/: postgres.py
Recovera_backend/app/retrieval/: retrieval_engine.py
Recovera_backend/data/db_schema/: DATABASE_DOCUMENTATION.md  chatbot_enums.json  columns.json  enums.json  foreign_keys.json  indexes.json  llm_schema_context.txt  materialized_views.json  primary_keys.json  rag_documents.json  row_counts.json  sample_rows.json  schema_metadata.json  table_comments.json  tables.json  views.json
Recovera_backend/data/evaluation/: golden_questions.json
Recovera_backend/tests/: test_chart_grammar.py  test_golden_question_coverage.py  test_query_executor_contract.py  test_question_patterns.py  test_sql_safety.py  test_sql_templates.py  test_sql_validator.py  test_v9_profit_loss_and_grounding.py
recovera_frontend/: .env.example  .gitignore  README.md  SECURITY.md  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
recovera_frontend/app/: globals.css  landing.css  layout.tsx  page.tsx
recovera_frontend/lib/: dashboard.ts  (+3 more)
(+5 files in other folders)
