[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "revenue-leakage-copilot"
version = "1.0.0"
description = "Revenue Leakage Detection AI Copilot"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",

    # Database
    "asyncpg>=0.29.0",

    # HTTP client (Groq + OpenRouter calls)
    "httpx>=0.27.0",

    # SQL parsing & validation
    "sqlglot>=23.0.0",

    # Environment & configuration
    "python-dotenv>=1.0.0",

    # Observability (optional but recommended)
    # "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",          # used by TestClient
    "coverage>=7.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
